--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,30 +46,37 @@ Index Of css
   border-radius: 1em; */
 }
 
+@media only screen and (max-width: 990px) {
+  .services {
+    margin: 3rem auto;
+  }
+  
+}
+
 /* End Services Area */
 
 /* Project Area */
 
-.site-main .project-area {
+.project-area {
   padding: 4rem 0;
 }
 
-.site-main .project-area .button-group button {
+.project-area .button-group button {
   background: transparent;
   border: none;
   font: normal 500 20px/120px var(--roboto);
   /* text-transform: uppercase; */
 }
 
-.site-main .project-area .button-group button + button {
+.project-area .button-group button + button {
   padding-left: 1rem;
 }
 
-.site-main .project-area .grid .our-project > .title h4 {
+.project-area .grid .our-project > .title h4 {
   font: normal 700 10px/12px var(--roboto);
 }
 
-.site-main .project-area .grid .our-project .img a:hover img {
+.project-area .grid .our-project .img a:hover img {
   filter: brightness(1.1) drop-shadow(1px 8px 30px #b1afaf);
   border-radius: .7em;
 }
