--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,14 +4,16 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Fancy - Bootstrap 5 One Page Template</title>
+    <title>PORTFOLIO | MARKHAN PRASETIYO</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/img/logo/markhan.png">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- ========================= CSS here ========================= -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/bootstrap-5.0.0-alpha.min.css">
     <link rel="stylesheet" href="/css/lineIcons.2.0.css">
     <link rel="stylesheet" href="/css/animate.css">
@@ -307,39 +309,57 @@
             </div>
 
             <!-- Portfolio Gallery Grid -->
-            <class class="row">
-                <div class="column html">
-                    <div class="content">
-                        <img src="/img/portfolio/portfolio-html1.png" alt="html" style="width:100%">
-                        <h4>My Portfolio</h4>
-                        <p>Building with html css</p>
-                    </div>
-                </div>
-                <div class="column php">
-                    <div class="content">
-                        <img src="/img/portfolio/portfolio-php1.png" alt="php" style="width:100%">
-                        <h4>PHP LARAVEL</h4>
-                        <p>Building with php and Framework laravel.</p>
-                    </div>
-                </div>
-                <div class="column nodejs">
-                    <div class="content">
-                        <img src="/img/portfolio/portfolio-2.png" alt="html" style="width:100%">
-                        <h4>Nodejs</h4>
-                        <p>Building with Nodejs Express and ejs template.</p>
-                    </div>
-                </div>
 
-                <div class="column html">
-                    <div class="content">
+
+            <div class="row">
+                <div class="col-sm-6 colom html">
+                    <div class="content html">
                         <img src="/img/portfolio/portfolio-4.png" alt="nodejs" style="width:100%">
                         <h4>Css:Html</h4>
                         <p>Building with html focused on css</p>
                     </div>
                 </div>
+                <div class="col-sm-6 colom nodejs">
+                    <div class="content nodejs">
+                        <!-- <img src="/img/portfolio/portfolio-2.png" alt="html" style="width:100%"> -->
+                        <img src="/img/portfolio/portfolio-2.png" width="80%" class="" alt="html">
+                        <h4>Nodejs</h4>
+                        <p>Building with Nodejs Express and ejs template.</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 colom html">
+                    <div class="content html">
+                        <img src="/img/portfolio/portfolio-html1.png" width="50%" class="" alt="html">
+                        <h4>My Portfolio</h4>
+                        <p>Building with html css</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 colom html">
+                    <div class="content html">
+                        <img src="/img/portfolio/portfolio-html1.png" width="50%" class="" alt="html">
+                        <h4>My Portfolio</h4>
+                        <p>Building with html css</p>
+                    </div>
+                </div>
+                <div class="col-sm-6 colom html">
+                    <div class="content html">
+                        <img src="/img/portfolio/portfolio-html1.png" width="50%" class="" alt="html">
+                        <h4>My Portfolio</h4>
+                        <p>Building with html css</p>
+                    </div>
+                </div>
+                <!--
+                <div class="col-sm-3">
+                    <div class="content colom php">
+                        <img src="/img/portfolio/portfolio-php1.png" width="0%" class="" alt="html">
+                        <h4>PHP LARAVEL</h4>
+                        <p>Building with php and Framework laravel.</p>
+                    </div>
+                </div> -->
+            </div>
 
-                <!-- END GRID -->
-            </class>
+            <!-- END GRID -->
+
         </div>
     </section>
 
@@ -597,6 +617,15 @@
     </a>
 
     <!-- ========================= JS here ========================= -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
+        integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
+        integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
+        crossorigin="anonymous"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAH1GNyYIiHWch3rtXFKWGxNKJ99iKQ1gs&callback=initMap&libraries=&v=weekly"
         async></script>
