fix portfolio and icons footer is emptyk link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -198,6 +198,10 @@
                                 codepolitan dalam bimbingan orang orang prefesional.</p>
 
                         </div>
+                        <div class="button text-center">
+                            <a href="https://github.com/KhnnPrasetiyo/Berkas_Lamaran_Kerja_Markhan_Prasetiyo/raw/main/CV_NEW_MARKHAN.pdf"
+                                type="submit" class="theme-btn">Download CV</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -299,19 +303,55 @@
                     </div>
                 </div>
             </div>
+            <div class="container">
+                <div class="row row-cols-1 row-cols-lg-2 g-2 g-lg-2">
+                    <div class="col">
+                        <div class="p-3 border bg-light"><img src="/img/portfolio/portfolio-4.png" alt="nodejs"
+                                style="width:100%">
+                                <h5>HTML - CSS </h5>
+                                <p>Building with html focused on css</p>
+                                <a href="https://github.com/KhnnPrasetiyo/gerhana-matahari">Source Code</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3 border bg-light"><img src="/img/portfolio/portfolio-2.png" width="80%" class=""
+                                alt="html">
+                            <h5>NODEJS - EXPRES</h5>
+                            <p>Building with Nodejs Express and ejs template.</p>
+                            <a href="https://khnn-nodejs-crud.herokuapp.com/">Link</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3 border bg-light"><img src="/img/portfolio/portfolio-html1.png" width="70%">
+                            <h5>HTML - CSS</h5>
+                            <p>Building with html css</p>
+                            <a href="https://github.com/KhnnPrasetiyo/Portfolio_KhnnPrasetiyo">Source Code</a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3 border bg-light"><img src="/img/portfolio/portfolio-php1.png" alt="nodejs"
+                                style="width:100%">
+                            <h5>PHP - LARAVEL</h5>
+                            <p>Building with php framework Laravel</p>
+                            <a href="https://github.com/KhnnPrasetiyo/Laravel-Crud">Source Code</a>
+                        </div>
+                    </div>
+                   
+                </div>
+            </div>
 
-            <div id="myBtnContainer">
+            <!-- <div id="myBtnContainer">
                 <button class="btn active" onclick="filterSelection('all')"> Show all</button>
                 <button class="btn" onclick="filterSelection('html')"> HTML CSS</button>
                 <button class="btn" onclick="filterSelection('php')"> PHP</button>
-                <!-- <button class="btn" onclick="filterSelection('people')"> People</button> -->
+
                 <button class="btn" onclick="filterSelection('nodejs')">NodeJs</button>
-            </div>
+            </div> -->
 
             <!-- Portfolio Gallery Grid -->
 
 
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-sm-6 colom html">
                     <div class="content html">
                         <img src="/img/portfolio/portfolio-4.png" alt="nodejs" style="width:100%">
@@ -321,7 +361,7 @@
                 </div>
                 <div class="col-sm-6 colom nodejs">
                     <div class="content nodejs">
-                        <!-- <img src="/img/portfolio/portfolio-2.png" alt="html" style="width:100%"> -->
+
                         <img src="/img/portfolio/portfolio-2.png" width="80%" class="" alt="html">
                         <h4>Nodejs</h4>
                         <p>Building with Nodejs Express and ejs template.</p>
@@ -348,15 +388,7 @@
                         <p>Building with html css</p>
                     </div>
                 </div>
-                <!--
-                <div class="col-sm-3">
-                    <div class="content colom php">
-                        <img src="/img/portfolio/portfolio-php1.png" width="0%" class="" alt="html">
-                        <h4>PHP LARAVEL</h4>
-                        <p>Building with php and Framework laravel.</p>
-                    </div>
-                </div> -->
-            </div>
+            </div> -->
 
             <!-- END GRID -->
 
@@ -521,9 +553,9 @@
                             <div class="col-xl-10 col-lg-8 mx-auto">
                                 <div class="section-title text-center mb-50">
                                     <span class="wow fadeInDown" data-wow-delay=".2s">Permintaan Anda</span>
-                                    <h2 class="wow fadeInUp" data-wow-delay=".4s">Siap memulai hal baru</h2>
-                                    <p class="wow fadeInUp" data-wow-delay=".6s">Kirimkan feedback anda untuk kebaikan
-                                        kita semua.</p>
+                                    <h2 class="wow fadeInUp" data-wow-delay=".4s">Feedback And Help</h2>
+                                    <p class="wow fadeInUp" data-wow-delay=".6s">Kirimkan pesan anda untuk developer.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -552,7 +584,7 @@
                             <div class="row">
                                 <div class="col-12">
                                     <div class="button text-center">
-                                        <button type="submit" class="theme-btn">Send Message</button>
+                                        <button type="submit" class="theme-btn">Kirim Pesan</button>
                                     </div>
                                 </div>
                             </div>
@@ -570,9 +602,9 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-lg-6">
                     <div class="section-title mb-30">
-                        <span class="text-white wow fadeInDown" data-wow-delay=".2s">Subscribe</span>
-                        <h2 class="text-white mb-40 wow fadeInUp" data-wow-delay=".4s">Dukungan anda adalah hal
-                            pentingku .. </h2>
+                        <span class="text-white wow fadeInDown" data-wow-delay=".2s">Ikuti Jejak</span>
+                        <h2 class="text-white mb-40 wow fadeInUp" data-wow-delay=".4s">terimakasih atas dungan anda
+                        </h2>
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6">
@@ -597,8 +629,8 @@
                         <div class="footer-social-links">
                             <ul class="d-flex">
                                 <li><a href="javascript:void(0)"><i class="lni lni-facebook-original"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-twitter-original"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-linkedin-original"></i></a></li>
+                                <li><a href="javascript:void(0)"><i class="lni lni-github-original"></i></a></li>
+                                <li><a href="javascript:void(0)"><i class="lni lni-youtube"></i></a></li>
                                 <li><a href="javascript:void(0)"><i class="lni lni-instagram-original"></i></a></li>
                             </ul>
                         </div>
