add fitur send mail

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -90,10 +90,13 @@
     </header>
     <!-- ========================= header end ========================= -->
 
+
+
     <!-- ========================= carousel-section end ========================= -->
     <section id="home" class="carousel-section-wrapper">
         <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
+
                 <div class="carousel-section carousel-item active clip-bg pt-225 pb-200 img-bg"
                     style="background-image: url('/img/carousel/1.jpg');">
                     <div class="container">
@@ -103,7 +106,8 @@
                                     <div class="section-title">
                                         <h2 class="text-white">Selamat Datang Teman !</h2>
                                         <p class="text-white">Terimaksih atas kunjungan anda, halaman ini akan
-                                            memberikan detail tentang diri saya dan juga dengan layanan yang dapat saya
+                                            memberikan detail tentang diri saya dan juga dengan layanan yang
+                                            dapat saya
                                             berikan untuk anda.</p>
                                     </div>
                                 </div>
@@ -119,7 +123,8 @@
                                 <div class="carousel-content text-center">
                                     <div class="section-title">
                                         <h2 class="text-dark">Saya Markhan Prasetiyo</h2>
-                                        <p class="text-dark">Dari jurusan informatika pemrograman dan desain web,
+                                        <p class="text-dark">Dari jurusan informatika pemrograman dan desain
+                                            web,
                                             keinginan besar untuk menjadi senior full stack Developer.</p>
                                     </div>
                                 </div>
@@ -298,8 +303,8 @@
                     <div class="section-title text-center mb-55">
                         <span class="wow fadeInDown" data-wow-delay=".2s">Portfolio</span>
                         <h2 class="wow fadeInUp" data-wow-delay=".4s">Hasil Kerja</h2>
-                        <p class="wow fadeInUp" data-wow-delay=".6s">Beberapa projek kecil yang saya berikan telah saya
-                            lampirkan di halaman ini, jika anda suka silahkan subcribe halaman ini.</p>
+                        <p class="wow fadeInUp" data-wow-delay=".6s">Beberapa projek kecil saya berikan telah saya
+                            lampirkan di halaman ini,</p>
                     </div>
                 </div>
             </div>
@@ -308,9 +313,9 @@
                     <div class="col">
                         <div class="p-3 border bg-light"><img src="/img/portfolio/portfolio-4.png" alt="nodejs"
                                 style="width:100%">
-                                <h5>HTML - CSS </h5>
-                                <p>Building with html focused on css</p>
-                                <a href="https://github.com/KhnnPrasetiyo/gerhana-matahari">Source Code</a>
+                            <h5>HTML - CSS </h5>
+                            <p>Building with html focused on css</p>
+                            <a href="https://github.com/KhnnPrasetiyo/gerhana-matahari">Source Code</a>
                         </div>
                     </div>
                     <div class="col">
@@ -336,7 +341,7 @@
                             <a href="https://github.com/KhnnPrasetiyo/Laravel-Crud">Source Code</a>
                         </div>
                     </div>
-                   
+
                 </div>
             </div>
 
@@ -559,7 +564,7 @@
                                 </div>
                             </div>
                         </div>
-                        <form action="assets/php/mail.php" class="contact-form">
+                        <form action="/kirim-pesan" method="POST" class="contact-form">
                             <div class="row">
                                 <div class="col-md-6">
                                     <input type="text" name="name" id="name" placeholder="Nama" required>
@@ -608,8 +613,8 @@
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6">
-                    <form action="#" class="subscribe-form wow fadeInRight" data-wow-delay=".4s">
-                        <input type="text" name="subs-email" id="subs-email" placeholder="Masukan Email">
+                    <form action="/subscribe" method="POST" class="subscribe-form wow fadeInRight" data-wow-delay=".4s">
+                        <input type="email" name="email" id="subs-email" placeholder="Masukan Email" required>
                         <button type="submit"><i class="lni lni-telegram-original"></i></button>
                     </form>
                 </div>
@@ -629,8 +634,10 @@
                         <div class="footer-social-links">
                             <ul class="d-flex">
                                 <li><a href="javascript:void(0)"><i class="lni lni-facebook-original"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-github-original"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="lni lni-youtube"></i></a></li>
+                                <li><a href="https://github.com/KhnnPrasetiyo"><i
+                                            class="lni lni-github-original"></i></a></li>
+                                <li><a href="https://www.youtube.com/channel/UCMXG3oZxW1gFfQIQaF78fDg"><i
+                                            class="lni lni-youtube"></i></a></li>
                                 <li><a href="javascript:void(0)"><i class="lni lni-instagram-original"></i></a></li>
                             </ul>
                         </div>
